Improve some reference details especially related to time

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -56,19 +56,19 @@ word in the sentence will tell you which derivation is being expressed.
 
 ## Art Language
 
-Hîsyêô is also an art language because it has taken the core of Kokanu and added
-many aesthetic, syntactic, and semantic ideas that allow it to be used as an
-everyday communication platform right now albeit with a starting "culture" in a
-similar way to how art language creators establish history to explain their
-language's idiosyncracies. The cultural lexicon of Hîsyêô is a representation of
-what the creators believe to be
+Hîsyêô is also an art language because there are many aesthetic, syntactic, and
+semantic ideas that go beyond just a plain auxiliary platform of communication.
+These aspects allow it to be used as an everyday communication platform right
+now albeit with a starting "culture" in a similar way to how art language
+creators write history to explain their language's idiosyncracies. The cultural
+lexicon of Hîsyêô is a representation of what the creators believe to be
 - the fundamentals of a modern democratic society
 - the necessary critical tools to authentically discuss bad things
-- lastly, a fun and whimsical inclination that tries to bring some uniqueness
+- the literary and poetic capability to be fun, whimsical, and wild 
 
 That being said, there are no mythological stories to anchor you like you might
-find in a natural society (and in artlangs). Because of this, there's a risk
-that these ideas will fade as the language gains a true living culture. The
+find in a natural society (and also in artlangs). Because of this, there's a
+risk that these ideas will fade as the language gains a true living culture. The
 community must remain vigilant that the things that make Hîsyêô great never fade
 but they must also be ever watchful for aspects of the culture that bring
 negativity or fascism. Hopefully, with time, stories will be written and printed
