--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -236,11 +236,11 @@ show returns?
 
 ### Days of the Week
 
-The Hîsyêô week days are, unlike the rest of the calendar, named after the most
-prevalent color of the planets of our solar system as seen in true color
-photography of the planet. The start of the week was chosen as Monday to
-coincide with the near majority of the world agreement on this and it allows
-Saturday and Sunday to be the "Weekend" (<HisyeoWord is='kônyêc'/> <HisyeoWord is='wêxôn'/>).
+The Hîsyêô week days are named after the most prevalent color of the planets of
+our solar system (as seen with true color photography). The start of the week
+was chosen as Monday to coincide with the near majority of the world agreement
+on this and it allows Saturday and Sunday to be the "Weekend" (<HisyeoWord
+is='kônyêc'/> <HisyeoWord is='wêxôn'/>).
 
 | Planet  | True Color Photo                                                                                                                                                                                                                                                                                                                                                                         | English   | Hîsyêô                                             | Abugida                                              |
 | ------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :-------- | :------------------------------------------------- | :--------------------------------------------------- |
@@ -252,13 +252,14 @@ Saturday and Sunday to be the "Weekend" (<HisyeoWord is='kônyêc'/> <HisyeoWord
 | Saturn  | ![Original Caption Released with Image: NASA's Voyager 2 took this 'true color' photograph of Saturn on July 21, 1981, when the spacecraft was 33.9 million kilometers (21 million miles) from the planet. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Saturn_With_Rhea_and_Dione_%28true_color%29.jpg/179px-Saturn_With_Rhea_and_Dione_%28true_color%29.jpg) | Saturday  | <HisyeoText kind='latin'>lono unbol</HisyeoText>  | <HisyeoText kind='abugida'>lono unbol</HisyeoText>  |
 | Uranus  | ![This picture of Uranus in true color was compiled from images returned Jan. 17, 1986, by the narrow-angle camera of Voyager 2. - Wikipedia](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Uranus_true_colour.jpg/240px-Uranus_true_colour.jpg)                                                                                                                             | Sunday    | <HisyeoText kind='latin'>lono xolxîlî</HisyeoText> | <HisyeoText kind='abugida'>lono xolxîlî</HisyeoText> |
 
-In order to indicate a specific day use one of the demonstrative pronouns
-(<HisyeoWord is='ôfo'/>, <HisyeoWord is='ulyô'/>, <HisyeoWord is='onô'/>). Otherwise, a weekday
-(or really any use of lono) is either one or many unspecified days. You
-can use a day as a condition in a hôn prepositional phrase:
+In order to indicate a specific day, use one of the demonstrative pronouns
+(<HisyeoWord is='ôfo'/>, <HisyeoWord is='ulyô'/>, <HisyeoWord is='onô'/>).
+Otherwise, a weekday (or really any use of <HisyeoWord is='lono'/>) is either
+one or many unspecified days. You can use a day as a condition in
+a <HisyeoWord is='hoî'/> prepositional phrase:
 
 <HisyeoTabs>
-  <p>hôn xokôn lono xolxîlî, û nûs li sî nô bi xobêk mût motûo sênzô</p>
+  <p>hoî xokôn lono xolxîlî, û nûs li sî nô bi xobêk mût motûo sênzô</p>
   <em>"Every Sunday, we used to go to grandpa's"</em>
 </HisyeoTabs>
 
@@ -356,6 +357,8 @@ relative clause is used to treat the following phrase as an
   <p>lono kon lôzîc nîo li lono mîhûon xe li lono ziyôn yê wuto tîû. 
      <em>"His birthday is Tuesday, May 14th"</em></p>
 </HisyeoTabs>
+
+The use of <HisyeoWord is='yê'/> is optional within a full date phrase.
 
 ### Saying Years
 
@@ -530,6 +533,19 @@ modifier content word that does double duty as a time unit for minutes.
 
 <HisyeoTabs>
   <p>ke li gô bi tôlkî lon tîû êfun&emsp;<em>"It will only be 5 minutes"</em></p>
+</HisyeoTabs>
+
+### Exact Date & Time
+
+You can combine everything together to specify both date and time. When doing
+so, you can either use <HisyeoWord is='yê'/> to connect the parts or you can
+elide (omit) this particle. Start with the most significant unit and work your
+way up to the least significant unit. You can use <HisyeoWord is='yê'/> and <HisyeoWord is='yê'/> for
+a more literal translation.
+
+<HisyeoTabs>
+    <p>nûs kûu li nô mût comen fîmôsyôs	hoî êfun kînsê suhot xêtî wuto nonkû ûsên dûî elfû ûn dûî dus tîû.&emsp;<em>"Let's head to the park at 15 minutes after 7 o'clock, March 14th, 2025"</em></p>
+    <p>nûs kûu li nô mût comen fîmôsyôs	hoî kînsê êfun cihôû suhot xêtî wuto nonkû ûsên dûî elfû ûn dûî dus tîû.&emsp;<em>"Let's head to the park at 15 minutes after 7 o'clock, March 14th, 2025"</em></p>
 </HisyeoTabs>
 
 ## Measurements
