add introducing section to greetings lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -235,11 +235,33 @@ nucleus of some kind.
 
 ### Introducting others
 
-## Getting To Know You
+If you are bringing someone to meet others, you can create a polite imperative
+usage of <HisyeoWord is='monodo'/>. You can also just use a simple
+demonstrative. When you introduce someone, the word you use as a nucleus of the
+proper name can be seen as an honorific. There are several words that are common.
 
-### Do You Speak...
+<HisyeoTabs>
+    <p>kûu monodo sûtûô (noyo) Zêk lôtfen.&emsp;<em>Please meet my friend Jake.</em></p>
+    <p>ôfo li umo Kelî.&emsp;<em>This is Kelly.</em></p>
+    <p>nîmû kûu monodo ônî bêûdo Ootyo.&emsp;<em>You should meet student Aadhya.</em></p>
+    <p>nîmû monodo foko bêûdo Ismêl ko.&emsp;<em>Have you met teacher Ismail?</em></p>
+</HisyeoTabs>
 
-### Where You're From
+:::warn know vs meet
+
+There are two different ways you can "know" someone or something. When you know
+a subject, having once studied it or if you practice it everry day, that is one
+sense. When you have seen someone and can describe them, or have tried a method,
+or any other thing that you have been exposed to in some capacity that is
+slightly more than just being acquaintances, that is the other sense.
+
+In Hîsyêô, the verb <HisyeoWord is='fôlun'/> is intended only for the first
+sense. The verb <HisyeoWord is='monodo'/> is intended for the the second sense.
+
+To imply that you "just met", you can use <HisyeoWord is='ubênus'/> in a manner
+preposition.
+
+:::
 
 ## Invitations
 
