Add invitation section to lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -265,7 +265,26 @@ preposition.
 
 ## Invitations
 
+In Hîsyêô culture, an invitation to participate in discussions and gatherings is
+common. Participation helps to develop your language skills, helps the communtiy
+to grow and builds stronger bonds amongst its members.
+
 ### Inviting Someone
+
+The verb <HisyeoWord is='xokûlû'/> is used for both calling and inviting
+actions. For the sense of "calling on the telephone", you would say that you
+invited someone to a conversation electronically. The direct object of the verb
+is the invited patient. The indirect object represents what you are inviting the
+patient to partipcipate in. It is supplied using <HisyeoWord is='mût'/> but if
+the purpose of the invitation is the same as the invited action, you can use the
+preposition <HisyeoWord is='oxon'/>.
+
+<HisyeoTabs>
+    <p>umo Dominik xokûlû si umo Kinen oxon kon kôto yê mocko.&emsp;<em>Dominick called Keenan for a conversation about cats.</em></p>
+    <p>nîmû ke xokûlû umo Kulisti mût (fos li nô mut) kôndodû onô ko.&emsp;<em>Will you invite Christie to (go to) the party?</em></p>
+    <p>noyo bi centik xokûlû nîmû mût côûfon kon môtô yê comen soden yê niwos noyo&emsp;<em>I formally invite you to my backyard barbecue.</em></p>
+    <p>umo Gulolîo xokûlû umo Bilondî oxon xe xokûlû nîo mût fos tûu kon mûhoyon. &emsp;<em>Gloria called Brandy to invite her to go camping.</em></p>
+</HisyeoTabs>
 
 ### Being Invited
 
