Finish greeting/salutions lessons.

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -288,4 +288,14 @@ preposition <HisyeoWord is='oxon'/>.
 
 ### Being Invited
 
+Hopefully when someone invites you to something in Hîsyêô, you will be able to
+participate. If not, you should respectfully decline the offer.
+
+<HisyeoTabs>
+    <p>(noyo) wofok kon xokûlû nîmû.&emsp;<em>I accept your invitation.</em></p>
+    <p>(noyo) kûu wofok yôk kon xokûlû nîmû nênko fos môî motûo (li gô) hoî sinsî onô.&emsp;<em>I must decline your invitation because my parents are in town.</em></p>
+    <p>li xoînbo û fos ulyô li foko xowosê.&emsp;<em>That sounds like fun!</em></p>
+    <p>(noyo) ke yûnyoû yôk zîcoû yê xe (li gô) hoî ulyô, hoî lono ulyô.&emsp;<em>I won't be able to make it on that day.</em></p>
+</HisyeoTabs>
+
 <HisyeoTooltip />
