Add small talk page

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -4,4 +4,49 @@ sidebar_position: 4
 
 # Small Talk
 
-Most conversations involve these brief details.
+Like all humans, Hîsyêô conversations can sometimes seem to just involve these
+details about our lives, our families and the weather.
+
+## How Are You?
+
+The most basic form of small talk is asking how someone is feeling. This shows
+the receiver of the question that you are interested in them and their
+wellbeing.
+
+<HisyeoTabs>
+    <p>bi zik û nîmû li gô hoî lono ôfo?&emsp;<em>How are you doing today?</em></p>
+    <p>oncêmon zik û nîmû hoî îbûdû?&emsp;<em>How are you feeling now?</em></p>
+    <p>bi zik û nîmû noî umo Xoônu?&emsp;<em>How are you, Shawna?</em></p>
+    <p>nîmû li xôn noî umo Lendun ko.&emsp;<em>Are you okay, Landon?</em></p>
+    <p>ujo (li gô) bi zik noî umo Sên?.&emsp;<em>How are things, Zane?</em></p>
+</HisyeoTabs>
+
+## What Are You Doing?
+
+Another common topic of conversation is what someone is doing, idiomatically
+what they are "up to". There are three forms that are a good fit for this question.
+
+<HisyeoTabs>
+    <p>(nîmû) cînlî zik noî umo Donî?&emsp;<em>What are you up to, Donny?</em></p>
+    <p>noî umo Lôdolfô (û nîmû) tûu zik?&emsp;<em>Rodolfo, what are you doing?</em></p>
+    <p>zik li gô noî umo Kefulin?&emsp;<em>What's happening, Katheryn?</em></p>
+</HisyeoTabs>
+
+## Health & Wellness
+
+Often times we also ask if someone is feeling good or tell others about a recent
+sickness we experienced.
+
+<HisyeoTabs>
+    <p>nîmû oncêmon zôtêstô (sohoû) hoî lono ôfo noî umo Sokuloyo?&emsp;<em>Are you feeling okay today, Zaccaria?</em></p>
+    <p>noî umo Wûon nîmû dôstoc sobûnî ko.&emsp;<em>Juan, did you get sick?</em></p>
+    <p>noyo oncêmon yôk xôn noî Nôê.&emsp;<em>I am not feeling well, Noe.</em></p>
+    <p>umo Yilî li sobûnî lôîcôk bînê nîo buswen xe nocîdo wêloi hoî lono ôfo.&emsp;<em>Yury is so sick that he had to skip work today.</em></p>
+    <p>umo Ulsenî oncêmon êto xôn eswen bînê nûs cînlî côûfon mutyu ofek nîo hoî lono xobêk.&emsp;<em>Arseny is feeling much better that we had lunch with her yesterday.</em></p>
+</HisyeoTabs>
+
+## Family & Friends
+
+## Loss & Condolences
+
+## Weather
