Fix missing imports

--- a/docs/lessons/small-talk.mdx
+++ b/docs/lessons/small-talk.mdx
@@ -2,6 +2,13 @@
 sidebar_position: 4
 ---
 
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+import HisyeoTabs from '@site/src/components/HisyeoTabs'
+import HisyeoText from '@site/src/components/HisyeoText'
+import HisyeoWord from '@site/src/components/HisyeoWord'
+import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
+
 # Small Talk
 
 Like all humans, Hîsyêô conversations can sometimes seem to just involve these
@@ -50,3 +57,5 @@ sickness we experienced.
 ## Loss & Condolences
 
 ## Weather
+
+<HisyeoTooltip />
